...
                                <rect key="frame" x="127" y="293" width="121" height="29"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="121" id="g6u-xh-M6F"/>
                                    <constraint firstAttribute="height" constant="28" id="wq1-F5-iwQ"/>
                                </constraints>
                                <segments>
                                    <segment title="||"/>
                                    <segment title="&gt;"/>
                                </segments>
                                <connections>
                                    <action selector="onPlayerSegmentControlChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="jVw-Ly-UTE"/>
                                </connections>
                            </segmentedControl>
...
