//
//  MetroGrooveUITests.swift
//  MetroGrooveUITests
//
//  Created by Thinh Nguyen on 7/12/15.
//  Copyright © 2015 Prospertin. All rights reserved.
//

import Foundation
import XCTest

@available(iOS 9.0, *)

class MetroGrooveUITests: XCTestCase {
    
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        let collectionViewsQuery = app.collectionViews
        collectionViewsQuery.staticTexts["HiHat"].tap()
        collectionViewsQuery.staticTexts["Ride"].tap()
        collectionViewsQuery.staticTexts["Crash"].tap()
        collectionViewsQuery.staticTexts["Kick"].tap()
        app.buttons[">"].tap()
        app.buttons["||"].tap()
        
    }
    
}
